# insignia-datastore

./: Cargo.toml
src/: lib.rs  main.rs
src/domain/: mod.rs
