[package]
name = "insignia-datastore"
version = "0.1.0"
authors = ["Björn Molin <bjorn.molin@svt.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
rusoto_core = "0.40"
rusoto_dynamodb = "0.40"
uuid = { version = "0.8", features = ["v4"] }
serde = "1"
serde_dynamodb = "0.4"
serde_derive = "1"


tokio = "=0.2.0-alpha.6"
chrono = "0.4.9"
