[package]
name = "insignia-datastore"
version = "0.1.2"
authors = ["Björn Molin <bjorn.molin@motrice.se>"]
edition = "2018"


[dependencies]
log = "^0.4"
rusoto_core = "0.43"
rusoto_dynamodb = "0.43"
rusoto_s3 = "0.43"
rusoto_credential = "0.43"
uuid = { version = "0.8", features = ["v4"] }
serde = "1"
serde_dynamodb = "0.5"
serde_derive = "1"
tokio = { version = "0.2.20", features = ["full"] }
smol = { version = "0.1", features = ["tokio02"] }
anyhow = "1.0.28"
chrono = "0.4"
futures = "0.3.4"
